# betfair-application-development

./: .env.example  .flake8  .gitignore  31441307.csv  LICENSE  README.md  app.debugger.py  app.py  client-2048.key  competition_list.json  docker-compose.yml  example.env  example.py  file.json  output-31451611.csv  output.csv  output.txt  pyproject.toml  requirements.txt  response.json  test.py
certs/: client-2048.crt  client-2048.pem  openssl.cnf
certs/pem/: cert.pem  key.pem
config/: __init__.py  config.py  logger.py
docker/: Dockerfile
error/: app_error.py
output/: output-01-May-2022-20.03.37.csv  output-11-May-2022-20.32.01.csv  output-12-May-2022-16.13.08.csv  output-13-May-2022-02.44.31.csv  output-13-May-2022-04.08.53.csv  output-28-Apr-2022-16.30.38.csv  output-28-Apr-2022-16.35.31.csv  output-test.csv
resources/: bet.py  data_threatment.py  data_treatment.py
resources/bet/: __init__.py  bet.py  bet_model.py  bet_models.py
resources/data_treatment/: __init__.py  builders.py  core.py  parsers.py
services/: api.py
services/api/: authentication.py  betting.py  requests.py
services/api/exchange/: __init__.py  api_parser.py  exchange.py  exchange_builders.py  exchange_parsers.py
services/betfair_api/: __init__.py  authentication.py  authentication_api.py  betfair_authentication_api.py  betfair_connector.py  betfair_parsers.py  betfair_requests.py  betfair_utils.py  betting.py  requests.py
services/betfair_api/bet_api/: __init__.py  (+4 more)
tasks/: tasks.py
tests/: test_async_programming.py  test_create_list.py
utils/: chronos.py  dotenv.py
(+5 files in other folders)
