[tool.poetry]
name = "betfair-application"
version = "1.1.5"
description = ""
authors = ["Marcos Pereira <marcos.p.10@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
certifi = "^2021.10.8"
charset-normalizer = "^2.0.12"
docopt = "^0.6.2"
idna = "^3.3"
mccabe = "^0.6.1"
mypy-extensions = "^0.4.3"
numpy = "^1.22.3"
pandas = "^1.4.2"
pipreqs = "^0.4.11"
pycodestyle = "^2.8.0"
pyflakes = "^2.4.0"
python-dateutil = "^2.8.2"
python-dotenv = "^0.20.0"
pytz = "^2022.1"
requests = "^2.27.1"
six = "^1.16.0"
tomli = "^2.0.1"
typing_extensions = "^4.2.0"
urllib3 = "^1.26.9"
yapf = "^0.32.0"
yarg = "^0.1.9"
ipython = "^8.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
